# pyautoflip

./: .gitignore  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
autoflip/: __init__.py  cli.py
autoflip/core/: processor.py
autoflip/cropping/: __init__.py  camera_motion.py  detection_utils.py  frame_crop_region.py  padding_effects.py  scene_cropper.py  types.py  visualization.py
autoflip/detection/: border_detector.py  face_detector.py  object_detector.py  shot_boundary.py
autoflip/fusion/: __init__.py  signal_fuser.py
autoflip/utils/: video.py  visualizer.py
