[tool.poetry]
name = "autoflip"
version = "0.1.0"
description = "AutoFlip implementation using OpenCV for intelligent video reframing"
authors = ["Ahmed Hisham <a7med.hish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
opencv-python = "<4.8.0"
numpy = "<2.0.0"
ffmpeg-python = "<0.3.0"
scikit-learn = "<1.3.0"
pillow = "<10.0.0"
tqdm = "<5.0.0"
scenedetect = "^0.6.6"
ultralytics = "^8.3.95"
insightface = "^0.7.3"
onnxruntime = "^1.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "<8.0.0"
black = "<24.0.0"
isort = "<6.0.0"
mypy = "<1.0.0"
flake8 = "<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
